# amct

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  DISCLAIMER.md  DISCLAIMER_en.md  OAT.xml  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  install_graph.sh  pyproject.toml  requirements.txt  setup.py
amct_ops/hifloat8_cast/: CMakeLists.txt  README.md  README_en.md
amct_ops/hifloat8_cast/op_extension/: hifloat8_cast_torch.cpp  ops.h  register.cpp
amct_ops/hifloat8_cast/op_kernel/: hifloat8_cast_kernel.cpp  hifloat8_cast_tiling.h
amct_pytorch/: CMakeLists.txt  __init__.py  deploy.py  eval.py  extract_ptq_data.py  ptq.py  quantize.py
amct_pytorch/algorithm/: __init__.py  awq.py  register_algo.py
amct_pytorch/algorithms/: __init__.py  register_algo.py  registry_factory.py
amct_pytorch/algorithms/common/: __init__.py  base_algo.py
amct_pytorch/algorithms/quant/: __init__.py  auto_clip.py  auto_round.py  awq.py  flatquant.py  omniquant.py
amct_pytorch/amct_pytorch_inner/: CMakeLists.txt
amct_pytorch/amct_pytorch_inner/amct_pytorch/: auto_channel_prune_search.py  distillation_interface.py  prune_interface.py  quant_calibration_interface.py  quantize_tool.py
amct_pytorch/amct_pytorch_inner/amct_tensor_decompose/: CMakeLists.txt
amct_pytorch/classic/: __init__.py  quantize.py
amct_pytorch/classic/deploy_op/: __init__.py  npu_hif8_cast_quantization_linear.py  npu_hif8_quantization_linear.py  npu_mx_quantization_linear.py  npu_quantization_conv2d.py  npu_quantization_deepseekv3_attention.py  npu_quantization_linear.py  npu_quantization_longcat_flashmla.py  weight_npu_quant_module.py
amct_pytorch/classic/graph_based/: CMakeLists.txt
amct_pytorch/classic/optimizer/: __init__.py  base_module_fusion_pass.py  insert_quantize_op_pass.py  model_optimizer.py  replace_npu_quant_pass.py
amct_pytorch/classic/quantize_op/: __init__.py  base_quant_module.py  cast_module.py  deepseekv3_attention_quant_module.py  gptq_module.py  linear_awq_module.py  longcat_flashmla_quant_module.py  minmax_module.py  ofmr_quant_module.py  quantile_module.py  smooth_quant_module.py  utils.py
amct_pytorch/cli/llm/: args.py  deploy.py  eval.py  extract_ptq_data.py  ptq.py
amct_pytorch/common/: __init__.py
amct_pytorch/common/auto_calibration/: __init__.py
amct_pytorch/common/auto_channel_prune/: __init__.py  search_channel_base.py  sensitivity_base.py
amct_pytorch/common/config/: __init__.py  config.py  fields.py  parser.py  utils.py
amct_pytorch/common/datasets/: __init__.py  preproc.py  ptq_io.py  ptq_provider.py
amct_pytorch/common/evaluate/: eval_ppl.py
amct_pytorch/common/models/: __init__.py
amct_pytorch/common/optimization/: __init__.py  base_solver.py  blockwise_solver.py  factory.py  global_solver.py
amct_pytorch/common/types/: __init__.py  quant_config.py
amct_pytorch/common/utils/: __init__.py  data_utils.py  model_util.py  quant_util.py  registry_factory.py  run_logging.py  safe_load.py  vars.py
amct_pytorch/config/: __init__.py  config.py  fields.py  parser.py  utils.py
amct_pytorch/configs/: bf16.yaml  example_w4a8.yaml  w4a4.yaml  w4a8.yaml  w8a8.yaml
amct_pytorch/deploy_op/: __init__.py  npu_hif8_cast_quantization_linear.py  npu_hif8_quantization_linear.py  npu_mx_quantization_linear.py  npu_quantization_conv2d.py  npu_quantization_deepseekv3_attention.py  npu_quantization_linear.py  npu_quantization_longcat_flashmla.py  weight_npu_quant_module.py
amct_pytorch/experimental/deepseek-v4/: README.md  README_en.md  convert_config.py  convert_model.py  mx_quantize.py  requirements.txt
amct_pytorch/experimental/flatquant/: __init__.py  config.py  reparam_utils.py
amct_pytorch/experimental/hifloat8/: README.md  README_en.md  build.sh  hifloat8_cast.cpp  hifloat8_fakequant_linear.py  setup.py  test.py  utils.py
amct_pytorch/graph_based_compression/: CMakeLists.txt
amct_pytorch/graph_based_compression/amct_pytorch/: __init__.py  accuracy_based_auto_calibration.py  auto_mixed_precision_search.py  distillation_interface.py  prune_interface.py  quant_calibration_interface.py  quantize_tool.py
amct_pytorch/graph_based_compression/amct_tensor_decompose/: CMakeLists.txt
amct_pytorch/graph_based_compression/custom_op/: CMakeLists.txt
amct_pytorch/nn/: __init__.py
amct_pytorch/nn/module/: __init__.py
amct_pytorch/optimizer/: __init__.py  base_module_fusion_pass.py  insert_quantize_op_pass.py  model_optimizer.py  replace_npu_quant_pass.py
amct_pytorch/quantization/: __init__.py  bit_policy.py
amct_pytorch/quantization/dtypes/: __init__.py  hifp.py  hifp_impl.py  int.py  int_impl.py  mxfp.py  mxfp_impl.py
amct_pytorch/quantize_op/: __init__.py  base_quant_module.py  deepseekv3_attention_quant_module.py  gptq_module.py  linear_awq_module.py  longcat_flashmla_quant_module.py  minmax_module.py  ofmr_quant_module.py  quantile_module.py  smooth_quant_module.py  utils.py
amct_pytorch/tensor_decompose/: __init__.py
amct_pytorch/utils/: check_params.py  data_utils.py  log.py  quant_util.py  vars.py
amct_pytorch/workflows/: llm_deploy.py  llm_eval.py  llm_extract_ptq_data.py  llm_ptq.py
tests/: CMakeLists.txt  conftest.py  requirements.txt
tests/amct_ops/: README.md  README_en.md  run_hifloat8_dtype_smoke.py  test_hifloat8_cast.py
tests/amct_pytorch/: .coveragerc  CMakeLists.txt  mock_torch_npu.py  test_awq.py  test_cast.py  test_config.py  test_customized_algo.py  test_data_util.py  test_deepseekv3_attention.py  test_fake_quant_forward.py  test_flatquant.py  test_fp8linear_to_hif8linear.py  test_fuzzy_matching.py  test_gptq.py  test_hifloat8_fallback.py  test_longcat_attention.py  test_minmax.py  test_mxquant.py  test_npu_quant_linear_bias_dtype.py  test_ofmr.py  test_quantile.py  test_quantize.py  test_smoothquant.py  utils.py
tests/smoke/: run_smoke.py  run_smoke.sh
tests/unit_test/: conftest.py  test_packaging.py  test_public_api.py
(+969 files in other folders)
